--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>숙제</h1>
-    <a href="que1.html">1번 문제</a>
+    <a href="que1.html">1번 문제</a><br>
+    <a href="que2.html">2번 문제</a><br>
+    <a href="que3.html">3번 문제</a><br>
 </body>
 </html>
