--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>숙제</h1>
     <a href="que1.html">1번 문제</a><br>
     <a href="que2.html">2번 문제</a><br>
     <a href="que3.html">3번 문제</a><br>
+    <a href="que4.html">4번 문제</a><br>
+    <a href="que5.html">5번 문제</a><br>
+
+    <ol>
+        <li><a href="que1.html">표 문제</a></li>
+        <li><a href="que2.html">img태그문제</a></li>
+        <li><a href="que3.html">ul 태그</a></li>
+        <li><a href="que4.html">ol 태그</a></li>
+        <li><a href="que5.html">table 태그 스타일 문제</a></li>
+    </ol>
 </body>
+
 </html>
