6번 문제 업로드

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="que3.html">3번 문제</a><br>
     <a href="que4.html">4번 문제</a><br>
     <a href="que5.html">5번 문제</a><br>
+    <a href="que6.html">6번 문제</a><br>
 
     <ol>
         <li><a href="que1.html">표 문제</a></li>
@@ -21,6 +22,7 @@
         <li><a href="que3.html">ul 태그</a></li>
         <li><a href="que4.html">ol 태그</a></li>
         <li><a href="que5.html">table 태그 스타일 문제</a></li>
+        <li><a href="que6.html">자기소개</a></li>
     </ol>
 </body>
 
