--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="que4.html">4번 문제</a><br>
     <a href="que5.html">5번 문제</a><br>
     <a href="que6.html">6번 문제</a><br>
+    <a href="que7.html">7번 문제</a><br>
 
     <ol>
         <li><a href="que1.html">표 문제</a></li>
@@ -23,6 +24,7 @@
         <li><a href="que4.html">ol 태그</a></li>
         <li><a href="que5.html">table 태그 스타일 문제</a></li>
         <li><a href="que6.html">자기소개</a></li>
+        <li><a href="que7.html">input문제</a></li>
     </ol>
 </body>
 
