--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="que5.html">5번 문제</a><br>
     <a href="que6.html">6번 문제</a><br>
     <a href="que7.html">7번 문제</a><br>
+    <a href="./8_eight/que8.html">8번 문제</a>
 
     <ol>
         <li><a href="que1.html">표 문제</a></li>
@@ -25,6 +26,7 @@
         <li><a href="que5.html">table 태그 스타일 문제</a></li>
         <li><a href="que6.html">자기소개</a></li>
         <li><a href="que7.html">input문제</a></li>
+        <li><a href="8_eight/que8.html">마지막 문제</a></li>
     </ol>
 </body>
 
